--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,6 @@
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
-}
-
-* {
 	font-family: 'Lato', sans-serif;
 }
 
@@ -114,18 +111,21 @@ a:hover {
 	flex-wrap: wrap;
 }
 
-.thumbnail {
+.col-sm-6,
+.col-md-4 {
 	margin-right: auto;
 	margin-left: auto;
-	margin-bottom: 15px;
+}
+
+.thumbnail {
 	border-radius: 10px;
 	border-color: #065c37;
 }
 
 /* adapted from http://stackoverflow.com/questions/493296/css-display-an-image-resized-and-cropped */
 .crop {
-	width: 300px;
 	height: 200px;
+	max-width: 350px;
 	overflow: hidden;
 }
 
@@ -146,7 +146,7 @@ footer {
 	height: 30px;
 }
 
-.linkedin-icon{
+.linkedin-icon {
 	float: left;
 	height: 30px;
 }
@@ -156,12 +156,12 @@ footer {
 	height: 30px;
 }
 
-.grow img{
+.grow img {
 	-moz-transition:-moz-transform 0.3s ease-in;
 	-webkit-transition:-webkit-transform 0.3s ease-in;
 	-o-transition:-o-transform 0.3s ease-in;
 }
-.grow img:hover{
+.grow img:hover {
 	-moz-transform:scale(1.3);
 	-webkit-transform:scale(1.3);
 	-o-transform:scale(1.3);
